--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+guru.username = John
+guru.password = wrong
+guru.dburl = dburl
 
+guru.jms.username=JMS Username
+guru.jms.password=password
+guru.jms.url=someURL
